"Fixing element missalignment in customer info"

--- a/styles.css
+++ b/styles.css
@@ -932,9 +932,7 @@ footer {
     background-color: #ffffff;
     padding: 0px 15px 15px 15px;
     border-radius: 15px;
-    
 }
-
 .mycart-title {
     text-align: center;
     font-weight: 600;
@@ -978,6 +976,11 @@ footer {
     line-height: 8px;
 }
 
+.cart-items-extras{
+    width: 400px;
+    line-height: 20px;
+    
+}
 .fa-trash {
     color: gray;
     position: absolute;
